<resources>
    <string name="app_name">My Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="female">Female</string>
    <string name="_0">60</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="male">Male</string>
    <string name="height_in_centimeters">Height (in centimeters)</string>
    <string name="kilograms">Kilograms</string>
    <string name="your_body_mass_index_is">Your body mass index is:</string>
    <string name="height">Height (cm)</string>
    <string name="kg">Kilograms:</string>
    <string name="calculate">Calculate</string>
    <string name="select_a_menu_option">Select a appMenu option</string>
    <string name="background_of_the_menu_options">Background of the appMenu options</string>
    <string name="closing">X (for closing the options in the appMenu)</string>
    <string name="kilograms_cm">Kilograms (kg)</string>
    <string name="search_fruits_vegetables_and_more">Search fruits, vegetables and more</string>
    <string name="about">About</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="kcal">kcal</string>
    <string name="our_choice">Our choice:</string>
    <string name="about_page">About Page</string>
    <string name="waist_cm">Waist (cm)</string>
    <string name="textview">30</string>
    <string name="default_home_picture">Default home picture</string>
    <string name="app_name_logo">App name logo</string>
    <string name="objects_fruits_vegetables_descriptions">Objects (fruits, vegetables ...) descriptions</string>
    <string name="search_object_photo">Search object photo</string>
    <string name="nutrients">Nutrients</string>
    <string name="search">Search</string>
    <string name="_60">60%</string>
    <string name="proteins">Proteins</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fibers">Fibers</string>
    <string name="calories">Calories</string>
    <string name="fat">Fat</string>
    <string name="loading">Loading...</string>
    <string name="about_text">This application is design to help adults to find the \n metric measurements for a healthy body.\n\nBelow are provided some information depending on \nthe selected height and waist.</string>
    <string name="application_created_by_malancas_anamaria">Application created by Malancas Anamaria</string>
    <string name="_50">50</string>
    <string name="_65">65</string>
</resources>