<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:onClick="showBMI"
        android:text="@string/calculate"
        android:textColor="@drawable/custom_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectorBackground"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/menuSelector"
        android:layout_width="19dp"
        android:layout_height="15dp"
        android:layout_marginBottom="405dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="23dp"
        android:onClick="showMenuAnimation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/selectorBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        app:srcCompat="@drawable/menu_selector"
        android:contentDescription="@string/select_a_menu_option" />

    <ImageView
        android:id="@+id/selectorBackground"
        android:layout_width="164dp"
        android:layout_height="165dp"
        android:contentDescription="@string/background_of_the_menu_options"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/options" />

    <ImageView
        android:id="@+id/closeSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:onClick="closeMenuAnimation"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/closing" />

    <TextView
        android:id="@+id/bmicCalcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="45dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:elegantTextHeight="true"
        android:text="@string/bmi_calculator"
        android:textColor="#44BD32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:onClick="openHomePage"
        android:text="@string/home"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/selectorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/selectorBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bmi_calculator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/bmi_calculator"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/selectorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/selectorBackground"
        app:layout_constraintTop_toBottomOf="@+id/home_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:onClick="openAboutPage"
        android:text="@string/about"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/selectorBackground"
        app:layout_constraintEnd_toEndOf="@+id/selectorBackground"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/selectorBackground"
        app:layout_constraintTop_toBottomOf="@+id/bmi_calculator_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/heightText"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/height_box"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:text="@string/height"
        android:textAlignment="gravity"
        android:textColor="#44BD32"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waist"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_body_mass_index_is"
        android:textAlignment="center"
        android:textSize="22sp"
        android:visibility="invisible"
        android:textColor="#44BD32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/conclusionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/maleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/custom_button"
        android:enabled="true"
        android:onClick="selectMaleButton"
        android:text="@string/male"
        android:textColor="@drawable/custom_text_color"
        app:layout_constraintBottom_toTopOf="@+id/waist"
        app:layout_constraintEnd_toStartOf="@+id/selectorBackground"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmicCalcText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/femaleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/custom_button"
        android:enabled="true"
        android:onClick="selectFemaleButton"
        android:text="@string/female"
        android:textColor="@drawable/custom_text_color"
        app:layout_constraintBottom_toTopOf="@+id/waistSlider"
        app:layout_constraintEnd_toStartOf="@+id/selectorBackground"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/maleButton"
        app:layout_constraintTop_toBottomOf="@+id/bmicCalcText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/kilograms"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/height_box"
        android:paddingEnd="60dp"
        android:paddingStart="60dp"
        android:paddingVertical="50dp"
        android:text="@string/_0"
        android:textColor="#44BD32"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/heightText"
        app:layout_constraintTop_toBottomOf="@+id/waist"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/inc"
        android:layout_width="35dp"
        android:layout_height="29dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/inc_dec_button_design"
        android:onClick="incDec"
        android:text="@string/plus"
        android:textColor="@drawable/custom_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/kilograms"
        app:layout_constraintEnd_toEndOf="@+id/kilograms"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dec"
        app:layout_constraintTop_toTopOf="@+id/kilograms"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/dec"
        android:layout_width="39dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/inc_dec_button_design"
        android:onClick="incDec"
        android:text="@string/minus"
        android:textColor="@drawable/custom_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/kilograms"
        app:layout_constraintEnd_toEndOf="@+id/kilograms"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/kilograms"
        app:layout_constraintTop_toTopOf="@+id/kilograms"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/kgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilograms_cm"
        android:textColor="#44BD32"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/kilograms"
        app:layout_constraintEnd_toEndOf="@+id/kilograms"
        app:layout_constraintStart_toStartOf="@+id/kilograms"
        app:layout_constraintTop_toTopOf="@+id/kilograms"
        app:layout_constraintVertical_bias="0.08" />

    <SeekBar
        android:id="@+id/heightSeekBar"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginEnd="98dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:rotation="270"
        app:layout_constraintBottom_toBottomOf="@+id/heightText"
        app:layout_constraintEnd_toEndOf="@+id/heightText"
        app:layout_constraintStart_toStartOf="@+id/heightText"
        app:layout_constraintTop_toTopOf="@+id/heightText"
        app:layout_constraintVertical_bias="0.0" />

    <NumberPicker
        android:id="@+id/heightNumberPicker"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="40dp"
        android:textDirection="locale"
        android:theme="@style/NumberPickerTheme"
        app:layout_constraintBottom_toBottomOf="@+id/heightText"
        app:layout_constraintEnd_toEndOf="@+id/heightText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/heightText"
        app:layout_constraintTop_toTopOf="@+id/heightText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/waist"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@drawable/height_box"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:text="@string/textview"
        android:textAlignment="viewEnd"
        android:textColor="#44BD32"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectorBackground"
        app:layout_constraintVertical_bias="0.15" />

    <SeekBar
        android:id="@+id/waistSlider"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toBottomOf="@+id/waist"
        app:layout_constraintEnd_toEndOf="@+id/waist"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/waistText"
        app:layout_constraintTop_toTopOf="@+id/waist"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/waistText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waist_cm"
        android:textColor="#44BD32"
        app:layout_constraintBottom_toBottomOf="@+id/waist"
        app:layout_constraintEnd_toEndOf="@+id/waist"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/waist"
        app:layout_constraintTop_toTopOf="@+id/waist" />

</androidx.constraintlayout.widget.ConstraintLayout>